<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MPSolve</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="insert_a_polynomial">Insert a polynomial:</string>
    <string name="solve">Solve</string>
    <string name="pref_algorithm">Algorithm</string>
    <string name="pref_algorithm_summ">Select the algorithm that you want to use for solving polynomials</string>
    <string name="pref_algorithm_secsolve">secsolve</string>
    <string-array name="pref_algorithm_values">
        <item >secsolve</item>
        <item >unisolve</item>
    </string-array>
    <string-array name="pref_algorithm_entries">
        <item >Secsolve</item>
        <item >Unisolve</item>
    </string-array>
    <string name="pref_digits">Required digits</string>
    <string name="pref_digits_summ">The minimum number of correct digits in the approximations</string>
    <string name="pref_digits_default">10</string>
    <string name="welcome_to_mpsolve">Welcome to MPSolve!</string>
    <string name="instructions">You can solve a polynomial by entering some text above. \nFor example, try the following:</string>
    <string name="instructions_land">You can solve a polynomial by entering some text above. \n\nFor example, try the following:</string>
    <string name="welcome_button_example">Solve x^70 &#8211; 2e4x^10 + 6/7</string>
    <string name="welcome_hint">&lt;b>Hint:&lt;/b> Navigate through the various views of the approximations by scrolling the pages left or right</string>
    <string name="action_load_file">Load .pol file</string>
    
    <!-- Preferences : pref_goal -->
    <string name="pref_goal">Goal</string>
    <string name="pref_goal_summ">Select the goal for the approximations</string>
    <string-array name="pref_goal_entries">
        <item>Approximation</item>
        <item>Newton isolation</item>
    </string-array>    
    <string-array name="pref_goal_values">
        <item>a</item>
        <item>i</item>
    </string-array>    
    <string name="pref_goal_default">a</string>
    
    <!-- Authors -->
    <string name="leonardo_robol">Leonardo Robol  &lt;leo@robol.it&gt;</string>
    <string name="dario_bini">Dario A. Bini &lt;bini@dm.unipi.it&gt;</string>
    <string name="giuseppe_fiorentino">Giuseppe Fiorentino &lt;fiorent@dm.unipi.it&gt;</string>
    
    <!--  About dialog  -->
    <string name="about_action">About MPSolve</string>
    <string name="license_title">License</string>
    <string name="mpsolveforandroid_authors">MPSolve for Android has been developed by: </string>
    <string name="mpsolve_authors">MPSolve has been written by: </string>
    <string name="mpsolve_about">MPSolve for Android and MPSolve are free software:
you can redistribute them and/or modify
them under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see http://www.gnu.org/licenses/.
</string>
    
</resources>
