<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="pref_algorithm"
        android:title="@string/pref_algorithm"
        android:summary="@string/pref_algorithm_summ"
        android:defaultValue="@string/pref_algorithm_secsolve"
        android:entries="@array/pref_algorithm_entries"
        android:entryValues="@array/pref_algorithm_values" />
    
    <EditTextPreference 
        android:key="pref_digits"
        android:title="@string/pref_digits"
        android:summary="@string/pref_digits_summ"
        android:defaultValue="@string/pref_digits_default"
        android:inputType="number" />
    
    <ListPreference
        android:key="pref_goal"
        android:title="@string/pref_goal"
        android:summary="@string/pref_goal_summ"
        android:defaultValue="@string/pref_goal_default"
        android:entries="@array/pref_goal_entries"
        android:entryValues="@array/pref_goal_values" />
    
</PreferenceScreen>