<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
            
    <TextView
        android:id="@+id/aboutTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:drawableLeft="@drawable/ic_launcher"
        android:drawablePadding="10dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mpsolveforandroid_authors"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingBottom="5dp" />
        
        <TextView 
            android:id="@+id/textViewLeonardoRobol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leonardo_robol"
            android:drawableLeft="@drawable/red_dot"
            android:drawablePadding="5dp"
            android:paddingLeft="5dp" />
        
        <TextView
            android:id="@+id/textViewMPSolveAuthors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mpsolve_authors"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingBottom="5dp"
            android:paddingTop="15dp" />

        <TextView 
            android:id="@+id/textViewDarioBini"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dario_bini"
            android:drawableLeft="@drawable/red_dot"
            android:drawablePadding="5dp"
            android:paddingLeft="5dp" />
        
        <TextView 
            android:id="@+id/textViewGiuseppeFiorentino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/giuseppe_fiorentino"
            android:drawableLeft="@drawable/red_dot"
            android:drawablePadding="5dp"
            android:paddingLeft="5dp" />        
                
        <TextView 
            android:id="@+id/textViewLeonardoRobol2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leonardo_robol"
            android:drawableLeft="@drawable/red_dot"
            android:drawablePadding="5dp"
            android:paddingLeft="5dp" />
        
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="40dp"
         android:paddingBottom="10dp"
         android:text="@string/license_title"
         android:textAppearance="?android:attr/textAppearanceMedium" />
            
	  <TextView
	      android:id="@+id/textView4"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:text="@string/mpsolve_about"
	      android:textAppearance="?android:attr/textAppearanceSmall" />            

    </LinearLayout>

</ScrollView>
